tests/golden/snapshots/render_scaffolders_matrix__errors_file_single.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
use anchor_lang::prelude::*;

#[error_code]
pub enum DemoError {
    // === sunscreen:auto-generated:begin segment=error_variants version=1 generator=error ===
    #[msg("caller is not authorized")]
    Unauthorized,
    // === sunscreen:auto-generated:end segment=error_variants ===
}
