tests/golden/snapshots/render_scaffolders_matrix__errors_file_two_variants.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
use anchor_lang::prelude::*;

#[error_code]
pub enum DemoError {
    // === sunscreen:auto-generated:begin segment=error_variants version=1 generator=error ===
    #[msg("caller is not authorized")]
    Unauthorized,
    #[msg("calculation overflowed")]
    MathOverflow,
    // === sunscreen:auto-generated:end segment=error_variants ===
}
