tests/golden/snapshots/render_scaffolders_matrix__event_binary_digest.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[event]
pub struct DigestRecorded {
    pub digest: [u8; 32],
}
