tests/golden/snapshots/render_scaffolders_matrix__event_closed_reason.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[event]
pub struct Closed {
    pub reason: String,
}
