tests/golden/snapshots/render_scaffolders_matrix__event_configured.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[event]
pub struct Configured {
    pub enabled: bool,
    pub count: u64,
    pub label: String,
}
