tests/golden/snapshots/render_scaffolders_matrix__event_deposited_amount.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[event]
pub struct Deposited {
    pub authority: Pubkey,
    pub amount: u64,
}
