tests/golden/snapshots/render_scaffolders_matrix__event_empty_ping.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[event]
pub struct Ping {
}
