tests/golden/snapshots/render_scaffolders_matrix__event_market_opened.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[event]
pub struct MarketOpened {
    pub asset: Pubkey,
    pub quote_mint: Pubkey,
}
