tests/golden/snapshots/render_scaffolders_matrix__event_nft_minted.snap
---
source: tests/golden/render_scaffolders_matrix.rs
expression: value
---
#[event]
pub struct NftMinted {
    pub mint: Pubkey,
    pub owner: Pubkey,
    pub uri: String,
}
